--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🧋 茶飲點餐系統</title>
+    <title>🧋 小澄市</title>
     <style>
         body {
             font-family: 'Microsoft JhengHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -356,7 +356,7 @@
 <body>
     <!-- 登入頁面 -->
     <div id="loginPage" class="login-container">
-        <div class="login-title">🧋 茶飲點餐系統</div>
+        <div class="login-title">🧋 小澄市</div>
         <div class="login-subtitle">請輸入密碼以繼續</div>
         <input type="password" id="passwordInput" class="password-input" placeholder="請輸入密碼" />
         <button id="loginBtn" class="login-btn">登入</button>
@@ -366,7 +366,7 @@
     <!-- 主要系統頁面 -->
     <div id="mainPage" class="container">
         <div class="header">
-            <h1>🧋 茶飲點餐系統</h1>
+            <h1>🧋 小澄市</h1>
             <p>即時同步，多人協作點餐</p>
             <button id="logoutBtn" class="logout-btn">登出</button>
             <div id="statusIndicator" class="status-indicator status-loading">連接中...</div>
@@ -530,7 +530,7 @@
 
     <script type="module">
         // 密碼設定（您可以修改這個密碼）
-        const SYSTEM_PASSWORD = 'tea2025';
+        const SYSTEM_PASSWORD = 'hy123';
         
         // Firebase 設定（已內嵌）
         const firebaseConfig = {
