--- a/index.html
+++ b/index.html
@@ -388,12 +388,13 @@
                 <label>選擇分類：</label>
                 <select id="categorySelect">
                     <option value="">請選擇分類</option>
-                    <option value="原萃小茶館">原萃小茶館</option>
-                    <option value="造市小秘境">造市小秘境</option>
-                    <option value="鮮榨小清翠">鮮榨小清翠</option>
+                    <option value="原沏小茶園">原沏小茶園</option>
+                    <option value="澄市小牧場">澄市小牧場</option>
+                    <option value="鮮採小澄果">鮮採小澄果</option>
                     <option value="醇韻奶茶">醇韻奶茶</option>
-                    <option value="邀茶市">邀茶市</option>
-                    <option value="美妙限定">美妙限定</option>
+                    <option value="塩雪澄市">塩雪澄市</option>
+                    <option value="澄凍澄市">澄凍澄市</option>
+                    <option value="季節限定">季節限定</option>
                 </select>
             </div>
             
@@ -549,56 +550,64 @@
         let unsubscribe = null;
         
         const menuData = {
-            "原萃小茶館": {
-                "夜韻紅茶": 35,
+            "原沏小茶園": {
+                "復刻紅茶": 35,
                 "金萱蜜香紅茶": 35,
-                "黃金烏龍茶": 40,
+                "黃金穀蕎麥": 40,
                 "四季春青茶": 35,
-                "三源茉莉綠茶": 35
+                "三窨茉莉綠茶": 35
             },
-            "造市小秘境": {
-                "金萱蜜香紅茶": 65,
-                "春芽蜜香青": 65,
-                "三源茉莉綠茶絲": 65,
-                "黃金烏龍蜜香奶茶": 65,
+            "澄市小牧場": {
+                "金萱鮮奶茶": 65,
+                "春芽鮮奶青": 65,
+                "三窨茉莉鮮奶綠": 65,
+                "黃金穀蕎麥鮮奶茶": 65,
                 "法式可可鮮奶茶": 85,
-                "焙咖啡抹茶拿鐵": 85,
-                "鮮榨蘋果蜜香奶茶": 95
+                "靜岡抹茶鮮奶": 85,
+                "鮮榨蘋果歐蕾": 95
             },
-            "鮮榨小清翠": {
-                "鮮百香綠茶": 60,
-                "百香波波茶": 70,
-                "鮮榨檸檬茶": 70,
-                "青檸氣泡茶": 55,
-                "鮮榨檸檬茶": 55,
-                "蜂蜜檸檬茶": 60,
-                "鮮榨蘋果紅茶": 65,
-                "檸檬夾青茶": 55,
-                "侯茶檸檬紅茶": 60,
-                "金萱蜜香紅茶": 60,
-                "造市水果茶": 70,
-                "鮮榨蘋果紅茶": 85
+            "鮮採小澄果": {
+                "鮮百香果綠": 60,
+                "百香波波綠": 70,
+                "鮮柳橙綠茶": 70,
+                "青釀脆梅綠": 55,
+                "鮮榨檸檬": 55,
+                "鮮甘蔗青茶": 60,
+                "鮮甘蔗檸檬": 65,
+                "翡翠凍檸檬": 55,
+                "桃氣檸檬": 60,
+                "金鑽蜜鳳梨": 60,
+                "澄市水果茶": 70,
+                "鮮榨蘋果紅玉": 85
             },
             "醇韻奶茶": {
                 "奶茶": 50,
-                "黃金烏龍奶茶": 55,
+                "黃金穀蕎麥奶茶": 55,
                 "冰淇淋紅茶": 50,
                 "珍珠奶茶": 55,
-                "紅茶拿鐵": 60,
-                "燕麥奶茶": 65
+                "翡翠凍奶綠": 60,
+                "波波四季奶青": 65
             },
-            "邀茶市": {
-                "造市茶凍": 45,
-                "造市鮮奶茶": 80,
-                "造市日式奶茶": 75,
-                "造市香檸茶": 60,
-                "造市蜂蜜茶": 75
+            "塩雪澄市": {
+                "塩雪黃金穀蕎麥": 65,
+                "塩雪金萱蜜香紅": 60,
+                "塩雪三窨茉莉綠": 60,
+                "塩雪四季春青": 60,
+                "塩雪可可脆片": 95,
+                "塩雪抹茶之士":95
             },
-            "美妙限定": {
-                "燒烤貝殼奶茶": 95,
-                "芒果蜜香奶茶": 95,
-                "蜂蜜芒果奶茶": 95,
-                "香草蜜香奶茶": 90
+            "澄凍澄市": {
+                "澄凍茉莉綠": 45,
+                "澄凍柳橙綠": 80,
+                "澄凍甘蔗檸檬": 75,
+                "澄凍香檸綠": 60,
+                "澄凍鮮奶綠": 75
+            },
+            "季節限定": {
+                "楊枝甘露": 95,
+                "芒果雪霜歐蕾": 95,
+                "塩雪芒果芝士": 95,
+                "奇異果波波": 90
             }
         };
 
