add fully no ice

--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
                         <option value="少冰">少冰</option>
                         <option value="微冰">微冰</option>
                         <option value="去冰">去冰</option>
+                        <option value="完全去冰">完全去冰</option>
                         <option value="溫飲">溫飲</option>
                         <option value="熱飲">熱飲</option>
                     </select>
@@ -761,6 +762,7 @@
                     { value: '少冰', text: '少冰' },
                     { value: '微冰', text: '微冰' },
                     { value: '去冰', text: '去冰' },
+                    { value: '完全去冰', text: '完全去冰' },
                     { value: '溫飲', text: '溫飲' },
                     { value: '熱飲', text: '熱飲' }
                 ];
