add lemon green black

--- a/index.html
+++ b/index.html
@@ -587,7 +587,9 @@
                 "百香波波綠": 70,
                 "鮮柳橙綠茶": 70,
                 "青釀脆梅綠": 55,
-                "鮮榨檸檬": 55,
+                "鮮榨檸檬紅茶": 55,
+                "鮮榨檸檬綠茶": 55,
+                "鮮榨檸檬清查": 55,
                 "鮮甘蔗青茶": 60,
                 "鮮甘蔗檸檬": 65,
                 "翡翠凍檸檬": 55,
@@ -599,7 +601,9 @@
                 "鮮榨蘋果青茶": 85
             },
             "醇韻奶茶": {
-                "奶茶": 50,
+                "復刻奶茶": 50,
+                "奶茶(綠)": 50,
+                "奶茶(青)": 50,
                 "黃金穀蕎麥奶茶": 55,
                 "冰淇淋紅茶": 50,
                 "珍珠奶茶": 55,
